--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "svg-thumbnails-rust"
-version = "0.1.0"
+name = "win-svg-thumbs"
+version = "1.0.0"
 edition = "2021"
 
 [profile.release]
