--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,13 @@ windows = { version = "0.61", features = [
     "Win32_System_Com",
     "Win32_UI_Shell_PropertiesSystem",
     "Win32_System_SystemServices",
-    "Win32_System_Registry"
+    "Win32_System_Registry",
+    "Win32_Security"
 ]}
 
 windows-core = "0.61"
-#windows-implement = "0.61"
 windows-registry = "0.5"
+
+# Unused but good to remember
+#windows-sys = { version = "0.60", features = ["Win32_System_Registry","Win32_Security"]}
+#windows-implement = "0.61"
