--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,10 @@ windows = { version = "0.61", features = [
     "Win32_UI_Shell_PropertiesSystem",
     "Win32_System_SystemServices",
     "Win32_System_Registry",
-    "Win32_Security"
+    "Win32_Security",
+    "Win32_Data_Xml_MsXml",
+    "Win32_System_Variant",
+    "Win32_System_Ole",
 ]}
 
 windows-core = "0.61"
