Add 32 bit compiling support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ members = [
 
 [package]
 name = "win_svg_thumbs"
-version = "1.8.0"
+version = "1.8.1"
 edition = "2021"
+build = "build.rs"
 
 [profile.release]
 # Include debug symbols
