Add batch file to update version info in DLLs
Requires Resource Hacker

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ TestSvgFiles
 **/*.msi
 **/*.wixpdb
 **/_*
+Build-And-Test-Tools/MSI Installer/ResourceHacker.exe
+Build-And-Test-Tools/MSI Installer/ResourceHacker.ini
 
 # Rust Related
 /target
