--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
 
 [package]
 name = "win_svg_thumbs"
-version = "1.8.4"
+version = "1.9.0"
 edition = "2021"
 build = "build.rs"
 
@@ -43,6 +43,8 @@ windows = { version = "0.61", features = [
     "Win32_Data_Xml_MsXml",
     "Win32_System_Variant",
     "Win32_System_Ole",
+    "Win32_System_SystemInformation",
+    "Win32_Globalization"
 ]}
 
 windows-core = "0.61"
